Fix ProxyPerf microbenchmark and micro-optimize codeClassForName